<resources>
    <string name="app_name">My Application</string>
    <string name="text_item_1">Home</string>
    <string name="text_item_2">Produto</string>
    <string name="text_item_3">Usuário</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Bem-vindo ao App!</string>
    <string name="texto">Use o menu para navegar entre Usuário e Produto</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="salvaruser">Salvar Usuário</string>
    <string name="nome_produto">Nome do Produto</string>
    <string name="preco">Preço</string>
    <string name="salvar_produto">Salvar Produto</string>
    <string name="cadastro_user">Cadastro de Usuário</string>
    <string name="cadastro_de_produto">Cadastro de Produto</string>
    <string name="name">ChatGPT</string>
    <string name="chatgpt">ChatGPT</string>
</resources>