<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_user"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etNomeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:autofillHints="name"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etEmailUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnSalvarUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvaruser" />

        <TextView
            android:id="@+id/tvListaUsuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />


    </LinearLayout>
</ScrollView>
