<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_de_produto"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/nome_produto"
            android:inputType="textCapWords"
            android:autofillHints="name"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etPrecoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/preco"
            android:inputType="numberDecimal"
            android:autofillHints="creditCardExpirationDate"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnSalvarProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/salvar_produto" />

        <TextView
            android:id="@+id/tvListaProdutos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />


    </LinearLayout>
</ScrollView>
